# hacka_analaura

./: CMakeLists.txt  README.md  package.xml
include/hacka_analaura/: mission_node.hpp
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/hacka_analaura/share/hacka_analaura/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
launch/: hacka_analaura.py
log/: latest_build
params/: coordenates.yaml  coordinates.yaml
src/: mission_main.cpp  mission_node.cpp  mission_node.hpp
